@@ -17,6 +17,7 @@ Changes for 1.3.4
 -Fixed the vanilla bug: resolved an incorrect behavior of a skull raft cells that makes the raft being squished when reaching a barrier wall
 -Credits look and performance has been improved
 -Fixed the vanilla bug: Peach can't escape the running shell surf
+-Loading screen now goes smoother (except Emscripten)
 
 Changes for 1.3.3.1
 -Fixed a crash, caused by the incremental locked warps counter that leads BGO array exciting
